# RAGForge

./: .gitignore  Dockerfile  README.md  indow.location.hostname === '127.0.0.1'|const _isLocal = window.location.hostname === 'localhost' \|\| window.location.hostname === '127.0.0.1'|  render.yaml
.github/workflows/: build.yml
backend/: auth.py  config.py  doc_parser.py  llm_client.py  main.py  rag_wrapper.py  requirements.txt
backend/tests/: conftest.py  test_api.py
docker/: Dockerfile
frontend/: index.html
rag_engine/: CMakeLists.txt
rag_engine/bindings/: rag_bindings.cpp
rag_engine/include/: chunker.h  embedder.h  index.h  mmr.h  rag_engine.h  rag_engine_core.h
rag_engine/src/: chunker.cpp  embedder.cpp  index.cpp  mmr.cpp  rag_engine.cpp  rag_engine_core.cpp
rag_engine/tests/: test_chunker.cpp  test_index.cpp  test_mmr.cpp
scripts/: build.sh  download_model.py  run.sh
